Fix Frame border being clipped by chart

--- a/frontend_src/css/charting_frame/pane.css
+++ b/frontend_src/css/charting_frame/pane.css
@@ -62,16 +62,6 @@
     cursor: crosshair;
 }
 
-.frame_ruler {
-    position: absolute;
-    pointer-events: none;
-    box-sizing: border-box;
-    top:0px;
-    left:0px;
-    width:100%;
-    height:100%;
-}
-
 .pane_controls {
     display: contents;
     user-select: none;
