--- a/frontend_src/css/layout/container.css
+++ b/frontend_src/css/layout/container.css
@@ -2,14 +2,30 @@
     position: absolute;
     box-sizing: border-box;
     border: solid var(--chart-border) 2px;
-    border-radius: 2px;
     background-color: var(--layout-main-fill);
 }
 
-.frame[active] {
-    border-color: var(--chart-border-hover);
+.frame[active], .frame[target] {
+    border-color: transparent;
 }
 
-.frame[target] {
-    border-color: var(--second-accent-color);
+.frame_ruler {
+    position: absolute;
+    pointer-events: none;
+    box-sizing: border-box;
+    top:0px;
+    left:0px;
+    width:100%;
+    height:100%;
+    z-index: 5;
+    border-radius: 2px;
+    border: solid transparent 1px;
+}
+
+.frame[active] .frame_ruler {
+    border-color: var(--second-accent-color)
+}
+
+.frame[target] .frame_ruler  {
+    border-color: var(--second-accent-color)
 }
